--- a/src/styling/dark-mode.css
+++ b/src/styling/dark-mode.css
@@ -1,14 +1,12 @@
 html.dark-mode {
-    background-color: rgba(35, 39, 47, 0.9);
+    background-color: #121212;
+    /* background-color: #0A0A0A; */
+    /* background-color: rgba(35, 39, 47, 0.9); */
 }
-
-/* first-page dark-mode setting*/
-/* .First-Page.dark-mode{
-    background-color: rgba(35, 39, 47, 0.9);
-} */
 
 .IamManas.dark-mode{
     background-color: rgba(22, 24, 29, 0.9);
+    /* background-color: rgba(22, 24, 29, 0.9); */
 }
 
 .IamManas.dark-mode h1{
@@ -18,15 +16,19 @@ html.dark-mode {
 
 /* nav bar dark-mode setting */
 .Nav-Bar.dark-mode{
-    background-color: rgba(35, 39, 47, 0.9);
+    background-color: #000000;
+    /* background-color: rgba(35, 39, 47, 0.9); */
 }
 
 .Nav-Bar a.dark-mode{
-    color: #e5e7eb;
+    color: #F5F5F5;
+    /* color: #e5e7eb; */
 }
 
 .Nav-Bar a:hover.dark-mode{
-    background-color: rgba(246,247,249,.05);
+    /* background-color: #BB86FC; */
+    background-color: #FF6F61;
+    /* background-color: rgba(246,247,249,.05); */
 }
 
 .Resume.dark-mode{
